Fixing IE11 issues
- forEach looping not available
- icons not showing up
- forms not taking up the space correctly

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,6 +31,11 @@
   }
 }
 
+.material-icons {
+  /* Support for IE */
+  font-feature-settings: "liga";
+}
+
 // Utility classes
 .line-break-text {
   white-space: pre-wrap;
